docs/v5.2.0/_sources/gallery/experiment/sphere/sphere_Qsca_vs_index.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_Qsca_vs_index.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_index.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_Qsca_vs_index.py:


Sphere: Qsca vs index
=====================

.. GENERATED FROM PYTHON SOURCE LINES 6-38



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_index_001.png
   :alt: sphere Qsca vs index
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_index_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.15/x64/lib/python3.11/site-packages/matplotlib/cbook.py:1719: ComplexWarning: Casting complex values to real discards the imaginary part
      return math.isfinite(val)
    /opt/hostedtoolcache/Python/3.11.15/x64/lib/python3.11/site-packages/matplotlib/cbook.py:1355: ComplexWarning: Casting complex values to real discards the imaginary part
      return np.asarray(x, float)

    [<matplotlib.lines.Line2D object at 0x7fc4de46ae50>, <matplotlib.lines.Line2D object at 0x7fc4db6a8710>, <matplotlib.lines.Line2D object at 0x7fc4db6b2fd0>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
    )


    polarization_set = PolarizationSet(
        angles=[30.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[500.0, 1000.0, 1500.0] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = SphereSet(
        diameter=[800.0] * ureg.nanometer,
        material=np.linspace(1.3, 1.9, 100),
        medium=[1.0],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="scatterer:material")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.164 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_index.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_Qsca_vs_index.ipynb <sphere_Qsca_vs_index.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_Qsca_vs_index.py <sphere_Qsca_vs_index.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_Qsca_vs_index.zip <sphere_Qsca_vs_index.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
